--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -16,10 +16,10 @@ jobs:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: ${{ secrets.AWS_REGION }}
-
-            - working-directory: ./backend
+            - name: Deploy Backend
+             working-directory: ./backend
             # sam build
-            - run: sam build --use-container
+             run: sam build --use-container
 
             # Run Unit tests- Specify unit tests here
 
