--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -16,12 +16,14 @@ jobs:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: ${{ secrets.AWS_REGION }}
-            - name: Deploy Backend
-             working-directory: ./backend
-            # sam build
-             run: sam build --use-container
+            - name: Build SAM
+              working-directory: ./backend
+              run: sam build --use-container
 
             # Run Unit tests- Specify unit tests here
 
             # sam deploy
-            - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name naruhodoo-backend --s3-bucket naruhodoo-lambda-bucket --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }}
+            - name: Deploy SAM
+              working-directory: ./backend
+              run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name naruhodoo-backend --s3-bucket naruhodoo-lambda-bucket --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }}
+              
