--- a/.github/workflows/backend-pipeline.yml
+++ b/.github/workflows/backend-pipeline.yml
@@ -1,12 +1,17 @@
+name: Backend CI/CD
+
 on:
     push:
         branches:
             - master
+        paths:
+            - "backend/**"
 jobs:
     backend-build-deploy:
         runs-on: ubuntu-latest
+        environment: backend-env
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
             - uses: actions/setup-python@v2
             - uses: aws-actions/setup-sam@v1
             - uses: aws-actions/configure-aws-credentials@v1
@@ -25,7 +30,3 @@ jobs:
             - name: Deploy SAM
               working-directory: ./backend
               run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name naruhodoo-backend --s3-bucket naruhodoo-lambda-bucket --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }}
-    frontend-build-deploy:
-        runs-on: ubuntu-latest
-        steps: 
-              
