--- a/.gitignore
+++ b/.gitignore
@@ -240,6 +240,7 @@ $RECYCLE.BIN/
 # Build folder
 
 */build/*
+.aws-sam
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
