--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "serverless-domain-manager": "^6.4.4",
-    "serverless-python-requirements": "^6.0.0"
+    "serverless-python-requirements": "^6.0.0",
+    "serverless-wsgi": "^3.0.2"
   }
 }
