--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -9,6 +9,15 @@ provider:
   profile: ${env:AWS_PROFILE}
   stage: ${opt:stage, 'dev'}
 
+  iam.role.statements:
+    - Effect: Allow
+      Action:
+        - cognito-idp:AdminCreateUser
+        - cognito-idp:AdminDeleteUser
+        - cognito-idp:AdminGetUser
+        - cognito-idp:AdminUpdateUserAttributes
+      Resource: '*'
+
 functions:
   hello:
     handler: functions/handler.hello
@@ -17,8 +26,16 @@ functions:
           path: /hello
           method: get
 
+  app:
+    handler: functions/app.kakao_login
+    events:
+      - http:
+          path: /login/kakao
+          method: get
+
 plugins:
   - serverless-python-requirements
+  - serverless-wsgi
   - serverless-domain-manager
 
 custom:
@@ -28,3 +45,8 @@ custom:
     basePath: ${self:provider.stage}
     certificateName: ${env:CERTIFICATE_NAME}
     createRoute53Record: true
+    wsgi:
+      app: app.app
+      packRequirements: false
+    pythonRequirements:
+      dockerizePip: non-linux
