fix(path): Fix outdated function path in serverless.yml

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -11,10 +11,10 @@ provider:
 
 functions:
   hello:
-    handler: functions/handler.hello
+    handler: src/app/handler.hello
     events:
       - http:
-          path: src/app/hello
+          path: /hello
           method: get
 
 plugins:
