Let's revoke access token and session token together!

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -43,7 +43,7 @@ functions:
     events:
       - http:
           path: /logout
-          method: get
+          method: patch
 
   delete_account:
     handler: functions/handler.delete_account
