--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -24,6 +24,22 @@ provider:
     REDIS_HOST: ${ssm:/naruhodoo/${self:provider.stage}/redis/host, env:REDIS_HOST}
     REDIS_PORT: ${ssm:/naruhodoo/${self:provider.stage}/redis/port, env:REDIS_PORT}
     REDIS_DB: ${ssm:/naruhodoo/${self:provider.stage}/redis/db, env:REDIS_DB}
+  iam:
+    role:
+      statements:
+        - Effect: 'Allow'
+          Action:
+            - 'dynamodb:PutItem'
+            - 'dynamodb:DeleteItem'
+            - 'dynamodb:Scan'
+            - 'dynamodb:GetItem'
+          Resource:
+            - 'arn:aws:dynamodb:ap-northeast-2:401482569934:table/websocket-connections-jwlee-test'
+        - Effect: 'Allow'
+          Action:
+            - 'execute-api:ManageConnections'
+          Resource:
+            - 'arn:aws:execute-api:ap-northeast-2:401482569934:*/*/*/*'
 
 package:
   patterns:
@@ -70,6 +86,24 @@ functions:
           cors:
             origin: '*'
             headers: '*'
+
+  connect-handler:
+    handler: src/lambda/handler.connect_handler
+    events:
+      - websocket:
+          route: $connect
+
+  disconnect-handler:
+    handler: src/lambda/handler.disconnect_handler
+    events:
+      - websocket:
+          route: $disconnect
+
+  send-handler:
+    handler: src/lambda/handler.send_handler
+    events:
+      - websocket:
+          route: sendOpinion
 
 custom:
   customDomain:
