--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -66,7 +66,7 @@ custom:
   pythonRequirements:
     dockerizePip: true  # Use docker to install dependencies for non-linux environments
     slim: true  # Slim down the size of the package by removing unneeded files
-    cacheLocation: '/Users/hoon/Projects/capstone/backend/.pip_cache'
+    cacheLocation: '.pip_cache'
 
 plugins:
   - serverless-python-requirements
