--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -11,7 +11,7 @@ provider:
 
 functions:
   hello:
-    handler: functions/handler.hello
+    handler: src/lambda/handler.hello
     events:
       - http:
           path: /hello
