Revert "Update/data model - model.sql (#42)"
This reverts commit 47941a7c703deb9f6ed8e24f0692332fe8c9f28a.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -362,11 +362,4 @@ poetry.toml
 # ruff
 .ruff_cache/
 
-### direnv ###
-.direnv
-.envrc
-
-# End of https://www.toptal.com/developers/gitignore/api/python,macos,node,direnv
-
-# local test data volume
-volumes/
+# End of https://www.toptal.com/developers/gitignore/api/python,macos,node
