--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - 5432:5432
     volumes:
       - ./volumes/postgres-data:/var/lib/postgresql/data
+      - ./model.sql:/docker-entrypoint-initdb.d/model.sql
     networks:
         - backend
 
