--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -99,6 +99,12 @@ functions:
       - websocket:
           route: $disconnect
 
+  init-join-handler:
+    handler: src/lambda/handler.init_join_handler
+    events:
+      - websocket:
+          route: initJoin
+
   send-handler:
     handler: src/lambda/handler.send_handler
     events:
