--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -26,6 +26,18 @@ services:
       - ./volumes/postgres-data:/var/lib/postgresql/data
     networks:
         - backend
+  
+  dynamodb:
+    image: amazon/dynamodb-local:latest
+    container_name: dynamodb
+    restart: always
+    ports:
+      - 8000:8000
+    volumes:
+      - ./volumes/dynamodb-data:/data
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /data"
+    networks:
+        - backend
 
 networks:
     backend:
