--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -24,6 +24,7 @@ provider:
     REDIS_HOST: ${ssm:/naruhodoo/${self:provider.stage}/redis/host, env:REDIS_HOST}
     REDIS_PORT: ${ssm:/naruhodoo/${self:provider.stage}/redis/port, env:REDIS_PORT}
     REDIS_DB: ${ssm:/naruhodoo/${self:provider.stage}/redis/db, env:REDIS_DB}
+    DYNAMODB_WS_CONNECTION_TABLE: ${ssm:/naruhodoo/${self:provider.stage}/dynamodb/ws_connection_table, env:DYNAMODB_WS_CONNECTION_TABLE}
   iam:
     role:
       statements:
@@ -33,8 +34,9 @@ provider:
             - 'dynamodb:DeleteItem'
             - 'dynamodb:Scan'
             - 'dynamodb:GetItem'
-          Resource:
-            - 'arn:aws:dynamodb:ap-northeast-2:401482569934:table/websocket-connections-jwlee-test'
+          Resource:   #TODO: 사용하고 있는 테이블만 허용하도록 제한해야 함
+            - 'arn:aws:dynamodb:ap-northeast-2:401482569934:table/*'
+        
         - Effect: 'Allow'
           Action:
             - 'execute-api:ManageConnections'
@@ -53,24 +55,40 @@ functions:
       - http:
           path: /hello
           method: get
+          cors:
+            origin: '*'
+            headers: '*'
+
   platform:
     handler: src/lambda/handler.get_platform
     events:
       - http:
           path: /platform
           method: get
+          cors:
+            origin: '*'
+            headers: '*'
+          
   hello-redis:
     handler: src/lambda/handler.hello_redis
     events:
       - http:
           path: /hello-redis
           method: get
+          cors:
+            origin: '*'
+            headers: '*'
+
   hello-db:
     handler: src/lambda/handler.hello_db
     events:
       - http:
           path: /hello-db
           method: get
+          cors:
+            origin: '*'
+            headers: '*'
+
   connect-handler:
     handler: src/lambda/handler.connect_handler
     events:
@@ -101,6 +119,12 @@ custom:
     createRoute53Record: true
   pythonRequirements:
     dockerizePip: true  # Use docker to install dependencies for non-linux environments
+    slim: true  # Slim down the size of the package by removing unneeded files
+    cacheLocation: '.pip_cache'
+    noDeploy:
+      - pytest
+      - boto3
+
 
 plugins:
   - serverless-python-requirements
