--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "postinstall": "patch-package"
+  },
   "devDependencies": {
+    "artillery": "^2.0.0-31",
+    "patch-package": "^6.5.1",
+    "pg": "^8.10.0",
     "serverless-domain-manager": "^6.4.4",
     "serverless-offline": "^12.0.4",
     "serverless-python-requirements": "^6.0.0"
