--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
+    "serve": "^14.2.0",
     "tailwindcss": "^3.2.7",
     "ws": "^8.13.0"
   }
