✨ Add local dynamodb dev environment

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -30,6 +30,7 @@ services:
   dynamodb:
     image: amazon/dynamodb-local:latest
     container_name: dynamodb
+    user: root
     restart: always
     ports:
       - 8000:8000
