--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - 5432:5432
     volumes:
       - ./volumes/postgres-data:/var/lib/postgresql/data
+      - ./setup/model.sql:/docker-entrypoint-initdb.d/model.sql
     networks:
         - backend
   
@@ -34,6 +35,7 @@ services:
     restart: always
     ports:
       - 8000:8000
+    user: root
     volumes:
       - ./volumes/dynamodb-data:/data
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /data"
